Refactored project as reactive